5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4061/executions/1760_1576.log
== TEST (2019-05-27 19:47:22) 
-- CODE:
from numpy import *
eusapia =array(eval(input("digite jogada: ")))
barsanulfo =array(eval(input("digite jogada: ")))

#pedra = 11
#papel = 22
#tesoura = 33
cont1 = 0
cont2 = 0
empate = 0
i = 0
tam = size(eusapia)
while size(eusapia - 1):
	jogada1 = eusapia [i]
	jogada2 = barsanulfo [i]
	if(eusapia [i] == barsanulfo [i]):
		empate = empate + 1
	elif(jogada1 == 11 and jogada2 == 33):
		cont1 = cont1 + 1
	elif(jogada1 == 33  and jogada2 == 22):
      cont1 = cont1 + 1
   elif(jogada1 == 22  and jogada2 == 11):
      cont1 = cont1 + 1
   elif(jogada2 == 11 and jogada1 == 33):
      cont2 = cont2 + 1
   elif(jogada2 == 33  and jogada1 == 22):
      cont2 = cont2 + 1
	else:
		cont2 = cont2 + 1
	i = i + 1
	
prin(tam)

if(cont1 == cont2):
	print("EMPATE")
elif(cont1 > cont2):
	print("EUSAPIA")
	else:
		print("BARSANULFO")
	
	

-- ERROR:
File "XXXX", line 21
    cont1 = cont1 + 1
                    ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:48:29) 
-- CODE:
from numpy import *
eusapia =array(eval(input("digite jogada: ")))
barsanulfo =array(eval(input("digite jogada: ")))

#pedra = 11
#papel = 22
#tesoura = 33
cont1 = 0
cont2 = 0
empate = 0
i = 0
tam = size(eusapia)
while size(eusapia - 1):
	jogada1 = eusapia [i]
	jogada2 = barsanulfo [i]
	if(eusapia [i] == barsanulfo [i]):
		empate = empate + 1
	elif(jogada1 == 11 and jogada2 == 33):
		cont1 = cont1 + 1
	elif(jogada1 == 33  and jogada2 == 22):
      cont1 = cont1 + 1
   elif(jogada1 == 22  and jogada2 == 11):
      cont1 = cont1 + 1
   elif(jogada2 == 11 and jogada1 == 33):
      cont2 = cont2 + 1
   elif(jogada2 == 33  and jogada1 == 22):
      cont2 = cont2 + 1
	else:
		cont2 = cont2 + 1
	i = i + 1
	
print(tam)

if(cont1 == cont2):
	print("EMPATE")
elif(cont1 > cont2):
	print("EUSAPIA")
else:
	print("BARSANULFO")
	
	

-- ERROR:
File "XXXX", line 21
    cont1 = cont1 + 1
                    ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:49:53) 
-- CODE:
from numpy import *
eusapia =array(eval(input("digite jogada: ")))
barsanulfo =array(eval(input("digite jogada: ")))

#pedra = 11
#papel = 22
#tesoura = 33
cont1 = 0
cont2 = 0
empate = 0
i = 0
tam = size(eusapia)
while size(eusapia - 1):
	jogada1 = eusapia[i]
	jogada2 = barsanulfo[i]
	if(eusapia[i] == barsanulfo[i]):
		empate = empate + 1
	elif(jogada1 == 11 and jogada2 == 33):
		cont1 = cont1 + 1
	elif(jogada1 == 33  and jogada2 == 22):
      cont1 = cont1 + 1
   elif(jogada1 == 22  and jogada2 == 11):
      cont1 = cont1 + 1
   elif(jogada2 == 11 and jogada1 == 33):
      cont2 = cont2 + 1
   elif(jogada2 == 33  and jogada1 == 22):
      cont2 = cont2 + 1
	else:
		cont2 = cont2 + 1
	i = i + 1
	
print(tam)

if(cont1 == cont2):
	print("EMPATE")
elif(cont1 > cont2):
	print("EUSAPIA")
else:
	print("BARSANULFO")
	
	

-- ERROR:
File "XXXX", line 21
    cont1 = cont1 + 1
                    ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:52:23) 
-- CODE:
from numpy import *
eusapia =array(eval(input("digite jogada: ")))
barsanulfo =array(eval(input("digite jogada: ")))

#pedra = 11
#papel = 22
#tesoura = 33
cont1 = 0
cont2 = 0
empate = 0
i = 0
tam = size(eusapia)
while(size(eusapia- 1) > i):
	jogada1 = eusapia[i]
	jogada2 = barsanulfo[i]
	if(eusapia[i] == barsanulfo[i]):
		empate = empate + 1
	elif(jogada1 == 11 and jogada2 == 33):
		cont1 = cont1 + 1
	elif(jogada1 == 33  and jogada2 == 22):
      cont1 = cont1 + 1
   elif(jogada1 == 22  and jogada2 == 11):
      cont1 = cont1 + 1
   elif(jogada2 == 11 and jogada1 == 33):
      cont2 = cont2 + 1
   elif(jogada2 == 33  and jogada1 == 22):
      cont2 = cont2 + 1
	else:
		cont2 = cont2 + 1
	i = i + 1
	
print(tam)

if(cont1 == cont2):
	print("EMPATE")
elif(cont1 > cont2):
	print("EUSAPIA")
else:
	print("BARSANULFO")
	
	

-- ERROR:
File "XXXX", line 21
    cont1 = cont1 + 1
                    ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:56:23) 
-- CODE:
from numpy import *
eusapia =array(eval(input("digite jogada: ")))
barsanulfo =array(eval(input("digite jogada: ")))

cont1 = 0
cont2 = 0
empate = 0
i = 0
tam = size(eusapia)
while(size(eusapia- 1) > i):
	jogada1 = eusapia[i]
	jogada2 = barsanulfo[i]
	if(eusapia[i] == barsanulfo[i]):
		empate = empate + 1
	elif(jogada1 == 11 and jogada2 == 33):
		cont1 = cont1 + 1
	elif(jogada1 == 33  and jogada2 == 22):
		cont1 = cont1 + 1
   elif(jogada1 == 22  and jogada2 == 11):
		cont1 = cont1 + 1
   elif(jogada2 == 11 and jogada1 == 33):
		cont2 = cont2 + 1
   elif(jogada2 == 33  and jogada1 == 22):
		cont2 = cont2 + 1
	else:
		cont2 = cont2 + 1
	i = i + 1
	
print(tam)

if(cont1 == cont2):
	print("EMPATE")
elif(cont1 > cont2):
	print("EUSAPIA")
else:
	print("BARSANULFO")
	
	

-- ERROR:
File "XXXX", line 19
    elif(jogada1 == 22  and jogada2 == 11):
                                          ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:57:33) 
-- CODE:
from numpy import *
eusapia =array(eval(input("digite jogada: ")))
barsanulfo =array(eval(input("digite jogada: ")))

cont1 = 0
cont2 = 0
empate = 0
i = 0
tam = size(eusapia)
while(size(eusapia- 1) > i):
	jogada1 = eusapia[i]
	jogada2 = barsanulfo[i]
	if(eusapia[i] == barsanulfo[i]):
		empate = empate + 1
	elif(jogada1 == 11 and jogada2 == 33):
		cont1 = cont1 + 1
	elif(jogada1 == 33  and jogada2 == 22):
		cont1 = cont1 + 1
	elif(jogada1 == 22  and jogada2 == 11):
		cont1 = cont1 + 1
	elif(jogada2 == 11 and jogada1 == 33):
		cont2 = cont2 + 1
	elif(jogada2 == 33  and jogada1 == 22):
		cont2 = cont2 + 1
	else:
		cont2 = cont2 + 1
	i = i + 1
	
print(tam)

if(cont1 == cont2):
	print("EMPATE")
elif(cont1 > cont2):
	print("EUSAPIA")
else:
	print("BARSANULFO")
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:58:23) 
-- CODE:
from numpy import *
eusapia =array(eval(input("digite jogada: ")))
barsanulfo =array(eval(input("digite jogada: ")))

cont1 = 0
cont2 = 0
empate = 0
i = 0
tam = size(eusapia)
while(size(eusapia- 1) > i):
	jogada1 = eusapia[i]
	jogada2 = barsanulfo[i]
	if(eusapia[i] == barsanulfo[i]):
		empate = empate + 1
	elif(jogada1 == 11 and jogada2 == 33):
		cont1 = cont1 + 1
	elif(jogada1 == 33  and jogada2 == 22):
		cont1 = cont1 + 1
	elif(jogada1 == 22  and jogada2 == 11):
		cont1 = cont1 + 1
	elif(jogada2 == 11 and jogada1 == 33):
		cont2 = cont2 + 1
	elif(jogada2 == 33  and jogada1 == 22):
		cont2 = cont2 + 1
	else:
		cont2 = cont2 + 1
	i = i + 1
	
print(tam)

if(cont1 == cont2):
	print("EMPATE")
elif(cont1 > cont2):
	print("EUSAPIA")
else:
	print("BARSANULFO")
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 19:58:41) 
-- CODE:
from numpy import *
eusapia =array(eval(input("digite jogada: ")))
barsanulfo =array(eval(input("digite jogada: ")))

cont1 = 0
cont2 = 0
empate = 0
i = 0
tam = size(eusapia)
while(size(eusapia- 1) > i):
	jogada1 = eusapia[i]
	jogada2 = barsanulfo[i]
	if(eusapia[i] == barsanulfo[i]):
		empate = empate + 1
	elif(jogada1 == 11 and jogada2 == 33):
		cont1 = cont1 + 1
	elif(jogada1 == 33  and jogada2 == 22):
		cont1 = cont1 + 1
	elif(jogada1 == 22  and jogada2 == 11):
		cont1 = cont1 + 1
	elif(jogada2 == 11 and jogada1 == 33):
		cont2 = cont2 + 1
	elif(jogada2 == 33  and jogada1 == 22):
		cont2 = cont2 + 1
	else:
		cont2 = cont2 + 1
	i = i + 1
	
print(tam)

if(cont1 == cont2):
	print("EMPATE")
elif(cont1 > cont2):
	print("EUSAPIA")
else:
	print("BARSANULFO")
	
	

-- EXECUTION TIME:
0.604463
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
